--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "english-reader-plasmo",
   "displayName": "English reader plasmo",
-  "version": "0.0.1",
+  "version": "0.1",
   "description": "Article reader for English learners.",
   "author": "Plasmo Corp. <foss@plasmo.com>",
   "scripts": {
@@ -10,9 +10,12 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.4",
     "plasmo": "0.87.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -20,7 +23,10 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "3.2.4",
+    "tailwindcss": "latest",
     "typescript": "5.3.3"
   },
   "manifest": {
