add register/login api/UI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     ".plasmo/index.d.ts",
     "./**/*.ts",
     "./**/*.tsx"
-  ],
+, "src/api/user.js"  ],
   "compilerOptions": {
     "paths": {
       "~*": [
