--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/typography": "^0.5.13",
+    "axios": "^1.7.2",
     "plasmo": "0.87.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
@@ -36,7 +38,7 @@
       "https://*/*"
     ],
     "permissions": [
-      "tabs"
+      "tabs", "storage"
     ]
   }
 }
