--- a/package.json
+++ b/package.json
@@ -5,25 +5,34 @@
   "description": "Enhance english article reading experience with TTS, bilingual mode, and looking up dictionary.",
   "author": "Wang Xiaopei <xiaopei0206@icloud.com>",
   "scripts": {
-    "dev": "plasmo dev",
+    "dev": "plasmo dev && npm run lint",
     "build": "plasmo build && npm run zip",
     "zip": "cd build/chrome-mv3-prod && zip -r english-reader.zip . && mv english-reader.zip ~/Downloads",
     "build:css": "npx tailwindcss -i tailwind.css -o src/styles/tailwind.css",
+    "lint": "eslint src/**/*.js src/**/*.jsx",
+    "lint:fix": "eslint src/**/*.js src/**/*.jsx --fix",
     "package": "plasmo package"
   },
   "dependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.6.0",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.4",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@tailwindcss/typography": "^0.5.13",
+    "eslint": "^9.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.8.0",
     "plasmo": "0.87.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-router-dom": "latest",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript-eslint": "^7.15.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
